fixed sidebar submenu title spacing

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -48,7 +48,7 @@ hr {
 }
 
 .submenu ul  {
-  margin-top: 18px;
+  margin-top: 14px;
 }
 
 .submenu ul:first-of-type {
